# esp32_lvgl_wifi_gui

./: .gitignore  .gitmodules  CMakeLists.txt  bugs_features.txt  one_factory_two_ota.csv  sdkconfig  sdkconfig.old
components/helper_func/: CMakeLists.txt  helper_func.cpp
components/helper_func/include/: helper_func.h
components/inventory/: CMakeLists.txt  inventory.cpp
components/inventory/include/: inventory.h
components/lvgl/: lv_conf.h
components/sd_fat/: CMakeLists.txt  sd_fat.c
components/shared_task/: CMakeLists.txt  shared_task.cpp
components/shared_task/include/: shared_task.h
components/system_status/: CMakeLists.txt  system_status.c
components/system_status/include/: system_status.h
components/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.cpp  ui_events.h
components/ui/UIS/: tabs.sll  tabs.spj
components/ui/UIS/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/UIS/ui/components/: ui_comp_hook.c
components/ui/UIS/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_notif.c  ui_setupScreen.c
components/ui/screens/: ui_checkin_checkout.c  ui_mainScreen.c  ui_memScreen.c  ui_setupScreen.c
components/wifi_app/: CMakeLists.txt  wifi_app.c
components/wifi_app/include/: wifi_app.h
main/: CMakeLists.txt  app_main.cpp
